tests/samples/negative/generics/generic_impl_associated_unknown.ax
module generic_impl_associated_unknown;

struct Box<T> {
    value: T;
}

impl<T> Box<T> {
    fn make(value: T) -> Box<T> {
        return Box { value: value };
    }
}

fn main() -> i32 {
    Box<i32>.missing(1);
    return 0;
}
